--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Service Samples</string>
+    <string name="start_service">Start Service</string>
+    <string name="restart_service">Restart Service</string>
 </resources>
