--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Service Samples</string>
     <string name="start_service">Start Service</string>
     <string name="restart_service">Restart Service</string>
+    <string name="progress">Progress: </string>
 </resources>
